--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "resend": "^4.0.1-alpha.0"
   },
   "devDependencies": {
+    "daisyui": "^4.12.14",
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
     "postcss": "^8",
